# Hephaestus

./: CMakeLists.txt  conanfile.py  readme.md
applications/: CMakeLists.txt
applications/hephaestus/: CMakeLists.txt
applications/hephaestus/include/hephaestus/: application.h  generators.h  window.h
applications/hephaestus/include/hephaestus/data_sources/: bool_data_source.h  index_data_source.h  string_list_data_source.h
applications/hephaestus/include/hephaestus/models/: global_model.h  indexed_string_list_model.h
applications/hephaestus/include/hephaestus/panels/: simple_panel.h
applications/hephaestus/resources/shaders/: display.frag  display.vert  text.frag  text.vert  widget.frag  widget.vert
applications/hephaestus/src/: application.cpp  generators.cpp  main.cpp  window.cpp
applications/hephaestus/src/data_sources/: bool_data_source.cpp  index_data_source.cpp  string_list_data_source.cpp
applications/hephaestus/src/models/: global_model.cpp  indexed_string_list_model.cpp
applications/hephaestus/src/panels/: simple_panel.cpp
modules/: CMakeLists.txt
modules/hephaestus-gui/: CMakeLists.txt  hephaestusVersionString.cmake
modules/hephaestus-gui/include/hephaestus-gui/: dllexport.h  gui.h
modules/hephaestus-gui/include/hephaestus-gui/materials/: display_material.h  display_material_instance.h  panel_transform_node.h  text_material.h  text_material_instance.h  widget_material.h  widget_material_instance.h  widget_transform_node.h
modules/hephaestus-gui/src/: gui.cpp
modules/hephaestus-gui/src/materials/: display_material.cpp  display_material_instance.cpp  panel_transform_node.cpp  text_material.cpp  text_material_instance.cpp  widget_material.cpp  widget_material_instance.cpp  widget_transform_node.cpp
modules/hephaestus-plugin-api/: CMakeLists.txt  readme.md
modules/hephaestus-plugin-api/include/hephaestus-plugin-api/: dllexport.h  plugin_api.h  plugin_info.h
modules/hephaestus-plugin-api/src/: plugin_api.cpp
modules/hephaestus-plugin-loader/: CMakeLists.txt
modules/hephaestus-plugin-loader/include/hephaestus-plugin-loader/: dllexport.h  plugin.h  plugin_loader.h
modules/hephaestus-plugin-loader/src/: plugin.cpp  plugin_loader.cpp
modules/hephaestus-settings/: CMakeLists.txt
modules/hephaestus-settings/include/hephaestus-settings/: dllexport.h  settings.h
modules/hephaestus-settings/src/: settings.cpp
modules/hephaestus-version/: CMakeLists.txt
modules/hephaestus-version/include/hephaestus-version/: dllexport.h  version.h
modules/hephaestus-version/src/: version.cpp
plugins/sample/: CMakeLists.txt
plugins/sample/include/sample/: dllexport.h  plugin_api.h
plugins/sample/src/: plugin_api.cpp
